--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <label>username:</label>
+    <input type="text" placeholder="enter">
+    <label>password:</label>
+    <input type="password" placeholder="pwd">
 </body>
 </html>
